--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -73,7 +73,7 @@
                         android:layout_marginBottom="20dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:text="일회용 플라스틱"
+                        android:text="알루미늄"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:textSize="20sp"/>
@@ -87,27 +87,12 @@
                         android:layout_marginBottom="20dp"
                         android:paddingLeft="40dp"
                         android:paddingRight="20dp"
-                        android:text="내용물을 비우고, 물로 깨끗이 세척한 후 플라스틱 일회용 컵 분리수거로 배출합니다."
+                        android:text="@string/Aluminum"
                         app:layout_constraintTop_toBottomOf="@+id/title1"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         />
-                    <TextView
-                        android:id="@+id/title1_content2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginBottom="20dp"
-                        android:paddingLeft="40dp"
-                        android:paddingRight="20dp"
-                        android:paddingBottom="20dp"
-                        android:text="라벨, 상표 등이 붙어있으면 완전히 떼어내서 일반쓰레기로 버리고 플라스틱 용기만 배출합니다"
-                        app:layout_constraintTop_toBottomOf="@+id/title1_content1"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/tapconstraint3"
@@ -145,27 +130,12 @@
                         android:layout_marginBottom="20dp"
                         android:paddingLeft="40dp"
                         android:paddingRight="20dp"
-                        android:text="rm속성분과 결합되어 있는 플라스틱제품류(문구류,CD 및 케이스,비디오·카세트테이프, 장난감,옷걸이,드리이기 등)"
+                        android:text="@string/Aluminum2"
                         app:layout_constraintTop_toBottomOf="@+id/title2"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         />
-                    <TextView
-                        android:id="@+id/title2_content2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginBottom="20dp"
-                        android:paddingLeft="40dp"
-                        android:paddingRight="20dp"
-                        android:paddingBottom="20dp"
-                        android:text="라벨, 상표 등이 붙어있으면 완전히 떼어내서 일반쓰레기로 버리고 플라스틱 용기만 배출합니다"
-                        app:layout_constraintTop_toBottomOf="@+id/title2_content1"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        />
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
