--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이미지 머신러닝"
+            android:text="이미지 선택"
             android:textSize="20sp"
             android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
@@ -47,7 +47,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이미지 없음"
+            android:text="이미지를 띄워주세요"
             android:textSize="50sp"
             android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
