--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -16,17 +16,23 @@
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
-                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="#DDEED7"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_height="48dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:title="알려줄게"
-                app:titleMarginStart="120dp"
-                app:titleTextColor="@color/black" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/Widget.MaterialComponents.Toolbar.Primary"
+                android:background="#DDEED7">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="알려줄게"
+                    android:textColor="@color/black"
+                    android:layout_gravity="center"
+                    android:textSize="20dp"
+                    />
+
+            </androidx.appcompat.widget.Toolbar>
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabs"
