--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -31,6 +31,13 @@
                     android:layout_gravity="center"
                     android:textSize="20dp"
                     />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_home_24"
+                    android:layout_gravity="right"
+                    android:id="@+id/home"
+                    android:layout_marginRight="16dp"/>
 
             </androidx.appcompat.widget.Toolbar>
 
