--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -44,11 +44,23 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/imageconstraint1"
         app:layout_constraintBottom_toTopOf="@+id/imageconstraint3">
-        <TextView
+
+        <ImageView
+            android:alpha="0.3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이미지를 띄워주세요"
-            android:textSize="50sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/icon"/>
+        <TextView
+            android:id="@+id/imageTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:text="이미지를 올려주세요"
+            android:textSize="36sp"
             android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
