--- a/app/src/main/res/layout/activity_main_mypage_setting4.xml
+++ b/app/src/main/res/layout/activity_main_mypage_setting4.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="공지사항"
+            android:text="문의하기"
             android:textSize="20sp"
             android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
