--- a/app/src/main/res/layout/activity_main_mypage_webview2.xml
+++ b/app/src/main/res/layout/activity_main_mypage_webview2.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainMypageWebview1">
-
+    tools:context=".MainMypageWebview2">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/setting2dot2_1"
         android:layout_width="match_parent"
@@ -27,7 +25,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="경북대학교"
+            android:text="대구 서구 재활용 분리배출 안내"
             android:textSize="20sp"
             android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
